--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="message_text">HELLO ASS</string>
-    <string name="button_text">CLICK ME</string>
+    <string name="message_text">IMEAN BETA1</string>
+    <string name="button_text">TEMP CLICK</string>
     <string name="title_activity_scroll_screen">ScrollScreen</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="rishabh_button_2">NEXT ACTIVITY</string>
+    <string name="rishabh_button_2">GO TO APP</string>
     <string name="title_activity_meaning_display">MeaningDisplay</string>
     <string name="title_activity_meaning_list">MeaningList</string>
     <string name="title_activity_label_word_list">LabelWordList</string>
